cockpit/plugins/cockpit_pty/src/cockpit_pty.h

#ifndef KYROON_PTY_H_
#define KYROON_PTY_H_

#if _WIN32
#define FFI_PLUGIN_EXPORT __declspec(dllexport)
#else
#define FFI_PLUGIN_EXPORT
#endif

#if defined(__linux__) || defined(__GLIBC__) || defined(__GNU__)
#define _GNU_SOURCE /* GNU glibc grantpt() prototypes */
#endif

#include "include/dart_api_dl.h"

typedef struct PtyOptions
{
    int rows;

    int cols;

    char *executable;

    char **arguments;

    char **environment;

    char *working_directory;

    Dart_Port stdout_port;

    Dart_Port exit_port;

    bool ackRead;

} PtyOptions;

typedef struct PtyHandle PtyHandle;

FFI_PLUGIN_EXPORT PtyHandle *pty_create(PtyOptions *options);

FFI_PLUGIN_EXPORT void pty_write(PtyHandle *handle, char *buffer, int length);

FFI_PLUGIN_EXPORT void pty_ack_read(PtyHandle *handle);

FFI_PLUGIN_EXPORT int pty_resize(PtyHandle *handle, int rows, int cols);

/// Encerra o shell e todos os processos que ele criou. 0 = sucesso.
///
/// POSIX sinaliza o process group (o `forkpty` faz do shell um líder de
/// sessão). Windows termina o Job Object **e** varre a árvore de descendentes:
/// medido no Windows 10 com PowerShell 7, os filhos do shell não herdavam o
/// job, então só a varredura fecha a issue #163.
///
/// Existe porque `Process.killPid` do Dart, no Windows, vira `TerminateProcess`
/// e encerra apenas o processo alvo.
FFI_PLUGIN_EXPORT int pty_kill(PtyHandle *handle);

FFI_PLUGIN_EXPORT int pty_getpid(PtyHandle *handle);

FFI_PLUGIN_EXPORT char *pty_error(void);

#endif